--- a/index.html
+++ b/index.html
@@ -3,26 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Time Related Apps</title>
+    <title>My Projects</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/Time/styles.css">
+    <link rel="stylesheet" href="/Projects/styles.css">
+    <link rel="stylesheet" href="/Projects/navbar.css">
   </head>
   <body>
-    <div class="container">
-        <div class="navbar">
-            
+      <div class="navbar">
+        <div class="container navbar-container d-flex justify-content-center align-items-center">
+          <h1 class="title">Projects</h1>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul>
+              <li>About Me</li>
+              <li>Settings</li>
+            </ul>
+          </div>
         </div>
-    </div>
+      </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
-    <script src="/Time/script.js"></script>
+    <script src="/Projects/script.js"></script>
   </body>
 </html>
