--- a/Numbers/Calculator.html
+++ b/Numbers/Calculator.html
@@ -19,7 +19,8 @@
         class="container navbar-container d-flex justify-content-center align-items-center"
       >
         <h1 class="title">Projects</h1>
-        <button onclick="appendToDisplay('7')"
+        <button
+          onclick="appendToDisplay('7')"
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
@@ -27,7 +28,6 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-
 
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul>
@@ -39,59 +39,66 @@
     </div>
 
     <div class="calculator">
-        <div class="container calc-container d-flex justify-content-center align-items-center">
-            <div class="display-container d-flex justify-content-center align-items-center">
-                <input type="text" id="display" readonly>
-            </div>
-            <div class="input">
-                <button onclick="appendToDisplay('7')">7</button>
-                <button onclick="appendToDisplay('8')">8</button>
-                <button onclick="appendToDisplay('9')">9</button>
-                <button onclick="deleteDisplay()">DEL</button>
-                <button onclick="clearDisplay()">CLR</button>
-                <button onclick="appendToDisplay('4')">4</button>
-                <button onclick="appendToDisplay('5')">5</button>
-                <button onclick="appendToDisplay('6')">6</button>
-                <button onclick="appendToDisplay('*')">x</button>
-                <button onclick="appendToDisplay('%')">%</button>
-                <button onclick="appendToDisplay('1')">1</button>
-                <button onclick="appendToDisplay('2')">2</button>
-                <button onclick="appendToDisplay('3')">3</button>
-                <button onclick="appendToDisplay('/')">/</button>
-                <button onclick="appendToDisplay('-')">-</button>
-                <button onclick="appendToDisplay('0')">0</button>
-                <button onclick="appendToDisplay('00')">00</button>
-                <button onclick="appendToDisplay('.')">.</button>
-                <button onclick="appendToDisplay('+')">+</button>
-                <button onclick="calculate()">=</button>
-            </div>
+      <div
+        class="container calc-container d-flex justify-content-center align-items-center"
+      >
+        <div
+          class="display-container d-flex justify-content-center align-items-center"
+        >
+          <input type="text" id="display1" readonly />
+          <input type="text" id="display2" readonly />
         </div>
+        <div class="input">
+          <button onclick="appendToDisplay('7')">7</button>
+          <button onclick="appendToDisplay('8')">8</button>
+          <button onclick="appendToDisplay('9')">9</button>
+          <button onclick="deleteDisplay()">DEL</button>
+          <button onclick="clearDisplay()">CLR</button>
+          <button onclick="appendToDisplay('4')">4</button>
+          <button onclick="appendToDisplay('5')">5</button>
+          <button onclick="appendToDisplay('6')">6</button>
+          <button onclick="appendToDisplay('*')">x</button>
+          <button onclick="appendToDisplay('%')">%</button>
+          <button onclick="appendToDisplay('1')">1</button>
+          <button onclick="appendToDisplay('2')">2</button>
+          <button onclick="appendToDisplay('3')">3</button>
+          <button onclick="appendToDisplay('/')">/</button>
+          <button onclick="appendToDisplay('-')">-</button>
+          <button onclick="appendToDisplay('0')">0</button>
+          <button onclick="appendToDisplay('00')">00</button>
+          <button onclick="appendToDisplay('.')">.</button>
+          <button onclick="appendToDisplay('+')">+</button>
+          <button onclick="calculate()">=</button>
+        </div>
+      </div>
     </div>
 
     <script>
-        const display = document.getElementById("display");
+      const displayUp = document.getElementById("display1");
+      const displayDown = document.getElementById("display2");
 
-        function appendToDisplay(input) {
-            display.value += input;
-        }
+      function appendToDisplay(input) {
+        displayDown.value += input;
+      }
 
-        function deleteDisplay(input) {
-            let current = display.value;
-            display.value = current.slice(0, -1);
-        }
+      function deleteDisplay(input) {
+        let current = displayDown.value;
+        displayDown.value = current.slice(0, -1);
+      }
 
-        function clearDisplay() {
-            display.value = "";
-        }
+      function clearDisplay() {
+        displayDown.value = "";
+        displayUp.value = "";
+      }
 
-        function calculate() {
-            try {
-                display.value = eval(display.value)
-            }
-            catch(error){
-                display.value = "Error";
-            }
-        }
+      // function calculate() {
+      //   try {
+      //     displayUp.value = displayDown.value
+      //     displayDown.value = eval(displayDown.value);
+      //   } catch (error) {
+      //     displayDown.value = "Error";
+      //   }
+      // }
     </script>
   </body>
 </html>
